2004-12-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/expat_erl.c: Now uses port control instead of port output
	* src/xml_stream.erl: Likewise

2004-11-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/stringprep.erl: Now register port instead of
	storing it in ets table

2004-11-28  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated URLs to R10C release

2004-11-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard.erl: Added missed index

2004-11-08  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated (thanks to Sander Devrieze)

2004-11-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/aclocal.m4: Fixed headers detecting in AM_WITH_OPENSSL
	(thanks to Leif Johansson)

	* src/ejabberd_auth.erl: Added support for ldap_rootdn and
	ldap_password options (thanks to Stefan de Konink)
	* src/mod_vcard_ldap.erl: Likewise

	* src/ejabberd_router.erl: Now possible to route packet via
	function call instead of message sending
	* src/ejabberd_sm.erl: Added function route/3, use it in route
	table
	* src/ejabberd_local.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise

2004-10-23  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Fixed spelling of word "authentication"

	* src/*/Makefile.in: Replaced erlc with @ERLC@

2004-10-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added remove_connection/1
	* src/ejabberd_s2s_out.erl: Use ejabberd_s2s:remove_connection/1

	* src/ejabberd_s2s_in.erl: Minor cleanup

	* examples/transport-configs/: Transport config examples (thanks
	to Sander Devrieze)

	* src/msgs/de.msg: German translation (thanks to Marina Hahn)

2004-10-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/win32/: Updated (thanks to Sergei Golovan)

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/mod_irc/iconv_erl.c: Bugfix (thanks to Jacek Konieczny)

2004-10-10  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.7.5 released

	* src/tls/Makefile.win32: Added (thanks to Sergei Golovan)
